--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,35 @@ font-size: 20px;
     text-align: center;
     letter-spacing: 1px;
 }
+@media(max-width:600px) {
+    .header{
+    height: 600px;
+    width: 100%;
+    padding: 70px 0 80px;
+    margin-top: 50px;
+    margin-bottom: 70px;
+    background-color: #f5f5f5;
+    text-align: center;
+    
+    
+}
+.header img{
+     border-radius: 50%;
+    height: 150px;
+    width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    
+    
+}
+p.intro{
+font-size: 14px; 
+    text-align: center;
+    letter-spacing: 1px;
+}
+h1{
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 33px;
+}
+}
