--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ Experiences
     text-align: center !important;
     background: linear-gradient(to bottom right, #1111, #2222);
     border-radius: 10px; 
-    margin-bottom: 5%;
+    margin-bottom: 0%;
     
 }
 .exp p{
@@ -156,6 +156,36 @@ Experiences
     font-weight: 600;
     text-decoration: underline;
     color: #111111;
+}
+
+/*
+
+contact us
+*/
+
+.contact{
+    
+    padding: 20px 0 55px;
+    margin-top: 0px;
+    margin-bottom: 1%;
+    text-align: center;
+    font-size: 18px;
+       background: linear-gradient(to bottom right, #dedce8, #f9f9f9,#1111);
+    border-radius: 30px;
+    
+}
+.cont{
+        background: linear-gradient(to bottom right, #1111, #f9f9f9,#1111);
+    padding: 10px 0 20px;
+    border-radius: 30px 50px;
+    
+}
+.fa{
+    font-size: 27px;
+}
+.contact h4{
+    font-size: 25px;
+    text-decoration: underline;
 }
 @media(max-width:600px) {
     .header{
