--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,9 @@ p{
     opacity: 1;
     background-color: #111111!important;
 }
+.navbar-default>li{
+    float: left!important;
+}
 
 .navbarbottom{
     background-color: #303030 !important;
@@ -121,56 +124,8 @@ Skills
 /*
 Experiences
 */
-.exp{
-    padding: 2% 0px 50px !important;
-    text-align: center !important;
-    background: linear-gradient(to bottom right, #1111,#f2f2f2, #dedce8);
-    border-radius: 25px; 
-    margin-bottom: 0%;
-    
-}
-.exp p{
-    padding-bottom: 10px;
-}
 
-.exp .place{
-    padding: 20px;
-    border: 1px solid #ccc;
-    background-color: #f5f7f9;
-    border-radius: 15px 50px;
 
-}
-.place li
-{
-    display: block;
-    padding: 5px;
-    font-size: 17px;
-    text-align: left;
-    color: #00111e;
-}
-.place h5{
-    font-size: 18px;
-}
-.place h4
-{
-    color: #202123;
-    font-weight: 600;
-    font-size: 25px;
-    font-family: Trebuchet MS;
-}
-.place .at{
-    font-size: 25px;
-    font-family: Courier New;
-    
-}
-
-.place h3{
-    font-size:35px; 
-    font-weight: 600;
-    text-decoration: underline;
-    color: #001111;
-    font-family: Comic Sans MS;
-}
 
 /*
 
@@ -258,4 +213,19 @@ h1{
     font-weight: bold;
     font-size: 27px;
 }
+    .cont{
+        margin-top: 3%;
+    }
+    .icon{
+  height: 38px !important ; 
+    width : !important;  
+}
+    .skill-head{
+      margin-bottom: 3%;
+    font-size: 40px;
+    font-family: courier;
+}
+    h4{
+        font-size: 13px;
+    }
 }
